# incandescent_engine

./: CMakeLists.txt  README.txt  vcpkg.json
shaders/: gradient.comp
src/: VkBootstrap.cpp  incan_struct_init.cpp  incan_struct_init.h  incandescent_descriptors.cpp  incandescent_descriptors.h  incandescent_engine.cpp  incandescent_engine.h  incandescent_images.cpp  incandescent_images.h  incandescent_pipelines.cpp  incandescent_pipelines.h  incandescent_types.h  main.cpp
